SERVER-40971 Fix the check of _resolvedNss in AutoGetCollection