src/mongo/db/catalog_raii.cpp
@@ -76,15 +76,15 @@ AutoGetCollection::AutoGetCollection(OperationContext* opCtx,
               deadline),
       _resolvedNss(resolveNamespaceStringOrUUID(opCtx, nsOrUUID)) {
 
-    NamespaceString resolvedNssWithLock;
+    NamespaceString prevResolvedNss;
     do {
         _collLock.emplace(opCtx, _resolvedNss, modeColl, deadline);
 
         // We looked up nsOrUUID without a collection lock so it's possible that the
         // collection is dropped now. Look it up again.
-        resolvedNssWithLock = resolveNamespaceStringOrUUID(opCtx, nsOrUUID);
-    } while (_resolvedNss != resolvedNssWithLock);
-    _resolvedNss = resolvedNssWithLock;
+        prevResolvedNss = _resolvedNss;
+        _resolvedNss = resolveNamespaceStringOrUUID(opCtx, nsOrUUID);
+    } while (_resolvedNss != prevResolvedNss);
 
     // Wait for a configured amount of time after acquiring locks if the failpoint is enabled
     MONGO_FAIL_POINT_BLOCK(setAutoGetCollectionWait, customWait) {
